--- a/assets/vertical-navigation/full-css.less
+++ b/assets/vertical-navigation/full-css.less
@@ -116,7 +116,7 @@
 @itemActiveBackground: #f2f4fa;
 @colorItem: #687492;
 @borders: #d9deeb;
-@itemActiveColor: #fff;
+@itemActiveColor: #687492;
 
 body{
   @media screen and (min-width: 768px){
