--- a/assets/images-follow-cursor/full.less
+++ b/assets/images-follow-cursor/full.less
@@ -1,1 +1,59 @@
+section[data-pic-animation] {
+    position: relative;
+    
+  div[data-pic-animation] {
+  position: relative;
+  padding: 0;
+  margin: 0;
+}
+  
+   .animation-inner-box {
+    	overflow: hidden;
+}
+  
+  .content-wrapper {
+  padding-top: 0 !important;
+}
+  
+  .pic-list {
+    position: relative;
+	height: 90vh;
+    padding: 0;
+    overflow: hidden;
+}
+  
+ .pic-item {
+    width: 350px;
+    height: 300px;
+    position: absolute;
+    left: 0;
+    list-style-type: none;
+    overflow: hidden;
+    border-radius: 5%;
+    right: 0;
+    top: 0;
+  
+  &.rotate-item {
+    margin: auto;    
+  }
+}
+
+  .pic-item img {
+    object-fit: cover;
+    width: 100%;
+    height: 100%;
+    object-position: top;
+    transition: transform 0.5s cubic-bezier(0.25, 0.8, 0.25, 1) 
+}
+ 
+}
+
+section[data-pic-animation] [data-hidden] {
+
+  img {
+     visibility: hidden;
+  }
+   
+}
+
 
