--- a/assets/image-list-view/index.less
+++ b/assets/image-list-view/index.less
@@ -1,1 +1,116 @@
+@font-family: "Martian Mono", monospace;
+@font-color:rgb(0, 0, 0);
+@font-size: 12px;
+@font-weight: 300;
 
+@font-color_description-item: white;
+
+@gallery-item-height: ~"clamp(230px, 30.2vw, 588px)";
+
+@arrow-icon: url(data:image/svg+xml;utf8,%3Csvg%20xmlns%3D%22http%3A%2F%2Fwww.w3.org%2F2000%2Fsvg%22%20width%3D%2215%22%20height%3D%2215%22%3E%3Cpath%20d%3D%22M.656%2014.344%2014.5.5M1.942.5H14.5v12.348%22%20fill%3D%22transparent%22%20stroke%3D%22currentColor%22%20stroke-miterlimit%3D%2210%22%2F%3E%3C%2Fsvg%3E);
+
+@change-arrow-to-white: invert(1);
+@change-arrow-to-black: invert(0);
+
+@transition-all: all 0.3s ease-out;
+
+.hidden-block {
+  display: none;
+}
+.switcher-gallery-wrapper {
+  p {
+    margin: 0 !important;
+    font-family: @font-family !important;
+    font-size: @font-size !important;
+    color: @font-color;
+    font-weight: @font-weight !important;
+  }
+  .switcher-container {
+    .switcher-block {
+      border: 1px solid @font-color;
+      .switcher{
+        background-color: @font-color;
+        transition: @transition-all !important;
+      }
+    }
+  }
+}
+.list-container{
+  .list-item{
+    border-top: 1px solid @font-color;
+    border-bottom: 1px solid @font-color;
+    @media screen and (max-width: 767px) {
+      &:after{
+        transition: @transition-all !important;
+        filter: @change-arrow-to-black;
+
+      }
+    }
+    a.list-link {
+     .list-item_counter {
+      &:before {
+        @media screen and (min-width: 768px) {
+          content: "";
+          width: 0;
+          height: 0;
+          display: block;
+          transition: @transition-all !important;
+          background-image:@arrow-icon;
+          background-size: contain;
+          background-position: center;
+          background-repeat: no-repeat;
+        }
+
+        @media screen and (max-width: 767px) {
+          content: "№";
+          font-family: @font-family;
+          font-size: @font-size;
+          color: @font-color;
+          font-weight: @font-weight;
+        }
+      }
+    }
+  }
+}
+
+.list-item:last-child {
+  border-bottom: 1px solid @font-color;
+}
+}
+
+.gallery-container {
+  .gallery-item {
+    height: @gallery-item-height;
+  }
+  .item-image{
+    img{
+      transition: @transition-all !important;
+    }
+  }
+  .item-description{
+
+    p {
+      color: @font-color_description-item;
+      transition: @transition-all !important;
+    }
+  }
+  .icon-wrapper {
+    display: flex;
+    align-content: flex-end;
+    justify-content: start;
+    flex-wrap: wrap;
+    width: 12px;
+    height: 12px;
+
+    .arrow-icon {
+      width: 0px;
+      height: 0px;
+      transition: @transition-all !important;
+      background-image: @arrow-icon;
+      background-size: contain;
+      background-position: center;
+      background-repeat: no-repeat;
+      filter: @change-arrow-to-white;
+    }
+  }
+}
