--- a/assets/pong-game/style.css
+++ b/assets/pong-game/style.css
@@ -1,1 +1,1 @@
-
+#defaultCanvas0{z-index:8!important;height:100vh!important;width:100vw!important;position:absolute!important}.layer-front .sqs-slide-layer-content{z-index:999999!important}
