--- a/assets/pop-out-panel/pop-out-panel.css
+++ b/assets/pop-out-panel/pop-out-panel.css
@@ -1,12 +1,61 @@
 body.sqs-edit-mode .side-menu-slider {display: none;}
+
+.menu-from-left .side-menu-slider {  
+  left: 0;
+  right: auto;
+  padding-left: 0;
+  padding-right: 20vw;
+  transform: translateX(-150%) rotate(-15deg);
+}
+.menu-from-left .side-menu-slider .side-menu-close-wrapper {
+  left: auto;
+  right: 20px;
+}
+@media only screen and (min-width: 768px) {
+  .menu-from-left .side-menu-slider .side-menu-close-wrapper {
+    left: ~"calc(@{side-menu-slider-tablet-width} + 20px)";
+    right: auto;
+  }
+}
+@media only screen and (min-width: 1280px) {
+  .menu-from-left .side-menu-slider .side-menu-close-wrapper {
+    left: ~"calc(@{side-menu-slider-desktop-width} + 20px)";
+    right: auto;
+  }
+}
+
+.menu-from-right .side-menu-slider {
+  left: auto;
+  right: 0;
+  padding-left: 20vw;
+  padding-right: 0;
+  transform: translateX(150%) rotate(15deg);
+}
+.menu-from-right .side-menu-slider .side-menu-close-wrapper {
+  left: auto;
+  right: 20px;
+}
+@media only screen and (min-width: 768px) {
+  .menu-from-right .side-menu-slider .side-menu-close-wrapper {
+    left: auto;
+    right: ~"calc(@{side-menu-slider-tablet-width} + 20px)";
+  }
+}
+@media only screen and (min-width: 1280px) {
+  .menu-from-right .side-menu-slider .side-menu-close-wrapper {
+    left: auto;
+    right: ~"calc(@{side-menu-slider-desktop-width} + 20px)";
+  }
+}
+
 .side-menu-slider {
   position: fixed;
   top: 0;
-  right: 0;
+  /* right: 0; */
   width: 100vw;
   height: 100vh;
-  padding-left: 20vw;
-  transform: translateX(150%) rotate(15deg);
+  /* padding-left: 20vw; */
+  /* transform: translateX(150%) rotate(15deg); */
   z-index: 20;
   transition: all .4s ease-out;
   overflow-y: scroll;
