--- a/assets/pop-out-panel/pop-out-panel.css
+++ b/assets/pop-out-panel/pop-out-panel.css
@@ -13,13 +13,13 @@ body.sqs-edit-mode .side-menu-slider {display: none;}
 }
 @media only screen and (min-width: 768px) {
   .menu-from-left .side-menu-slider .side-menu-close-wrapper {
-    left: ~"calc(@{side-menu-slider-tablet-width} + 20px)";
+    left: calc(70vw + 20px)";
     right: auto;
   }
 }
 @media only screen and (min-width: 1280px) {
   .menu-from-left .side-menu-slider .side-menu-close-wrapper {
-    left: ~"calc(@{side-menu-slider-desktop-width} + 20px)";
+    left: calc(40vw + 20px)";
     right: auto;
   }
 }
@@ -38,13 +38,13 @@ body.sqs-edit-mode .side-menu-slider {display: none;}
 @media only screen and (min-width: 768px) {
   .menu-from-right .side-menu-slider .side-menu-close-wrapper {
     left: auto;
-    right: ~"calc(@{side-menu-slider-tablet-width} + 20px)";
+    right: calc(70vw + 20px)";
   }
 }
 @media only screen and (min-width: 1280px) {
   .menu-from-right .side-menu-slider .side-menu-close-wrapper {
     left: auto;
-    right: ~"calc(@{side-menu-slider-desktop-width} + 20px)";
+    right: calc(40vw + 20px)";
   }
 }
 
