--- a/assets/push-over-mobile-menu/full.less
+++ b/assets/push-over-mobile-menu/full.less
@@ -1,1 +1,230 @@
+//Menu block
+@menu-block-background: #fcfcfc;
+@menu-block-links-alignment: center;
+@menu-block-padding-top: 2vw;
+@menu-block-padding-bottom: 2vw;
+@menu-block-padding-right: 1vw;
+@menu-block-width: 350px;
 
+//Menu toggle button 
+@menu-button-color: rgb(0, 0, 0);
+@menu-button-font-family: Poppins;
+@menu-button-font-size: 16px;
+@menu-button-letter-spacing: 1.25px;
+@menu-button-font-weight: 500;
+@menu-button-text-transform: uppercase;
+
+//Navigation links
+@navigation-links-color: rgb(0, 0, 0);
+@navigation-links-font-family: Poppins;
+@navigation-links-space-between: 24px;
+@navigation-links-font-size: 18px;
+@navigation-links-letter-spacing: 1.25px;
+@navigation-links-font-weight: 500;
+@navigation-links-text-transform: uppercase;
+
+//Navigation links in folder
+@navigation-folder-links-color: rgb(0, 0, 0);
+@navigation-folder-links-font-family: Poppins;
+@navigation-folder-links-space-between: 24px;
+@navigation-folder-links-font-size: 16px;
+@navigation-folder-links-letter-spacing: 1.25px;
+@navigation-folder-links-font-weight: 500;
+@navigation-folder-links-text-transform: uppercase;
+@navigation-folder-first-link-margin-top: 10px;
+@navigation-folder-links-margin-bottom: 10px;
+
+//Mobile links styles
+@mobile-links-font-family: Poppins;
+@mobile-links-font-size: 5vmin;
+@mobile-links-font-weight: 500;
+@mobile-links-letter-spacing: 1.25px;
+@mobile-links-text-transform:uppercase;
+@mobile-links-margin-top: 5vw;
+@mobile-links-margin-bottom: 5vw;
+
+
+.header{
+  .menu-toggle-button{
+    flex:1;
+      
+      span{
+        color: @menu-button-color;
+        font-family: @menu-button-font-family;
+        font-size: @menu-button-font-size;
+        cursor:pointer;
+        transition:opacity 0.3s ease-out;
+        text-transform: @menu-button-text-transform;
+        letter-spacing: @menu-button-letter-spacing;
+        font-weight: @menu-button-font-weight;
+        position: relative;
+        display: flex;
+        flex-wrap: wrap;
+        align-items: center;
+        gap: 8px;
+        
+        &:after{
+          content:'\2A09';
+          transform:rotate(45deg);
+          transition:all 0.3s ease-out;
+        }
+        
+        &:hover{
+          opacity:0.8;
+        }
+      }
+  }
+  
+  .menu-toggle-button.active{
+    span:after{
+      transform:rotate(90deg);
+    }
+  }
+  
+  .header-title{
+    flex:1 !important;
+  }
+  
+  .header-nav{
+    opacity:0;
+  }
+}
+
+.site-content-wrapper{
+  display:flex;
+  position:relative;
+}
+
+.site-content-inner{
+  flex:1;
+}
+
+.new-navigation-wrapper{
+  width:0;
+  transition: all 0.5s ease-out;
+  height:100vh;
+  box-sizing: border-box;
+  position:sticky;
+  top:0;
+  left:0;
+  display: flex;
+  align-items: @menu-block-links-alignment;
+  background:@menu-block-background;
+  
+  .header-nav{
+    padding-top: @menu-block-padding-top;
+    padding-bottom: @menu-block-padding-bottom;
+    padding-right: @menu-block-padding-right;
+    box-sizing: border-box;
+    opacity:1;
+  }
+  
+  .header-nav-list{
+    flex-direction:column;
+    gap:@navigation-links-space-between;
+  }
+  
+  .header-nav-item{
+    outline:none;
+  }
+  
+  .header-nav-item a{
+    color: @navigation-links-color;
+    font-family: @navigation-links-font-family;
+    font-size: @navigation-links-font-size;
+    font-weight: @navigation-links-font-weight;
+    letter-spacing:@navigation-links-letter-spacing;
+    text-transform:@navigation-links-text-transform;
+    transition:opacity 0.3s ease-out;
+    opacity:0;
+    outline:none;
+  }
+  
+  .header-nav-item--active a {
+   background-image: none !important;
+  }
+  
+  .header-nav-folder-item a{
+    color: @navigation-folder-links-color;
+    font-family: @navigation-folder-links-font-family;
+    font-size: @navigation-folder-links-font-size;
+    font-weight: @navigation-folder-links-font-weight;
+    letter-spacing:@navigation-folder-links-letter-spacing;
+    text-transform:@navigation-folder-links-text-transform;
+    transition:opacity 0.3s ease-out;
+    opacity:0;
+    outline:none;
+  }
+  
+  .header-nav-folder-content .header-nav-folder-item:first-child{
+    margin-top:@navigation-folder-first-link-margin-top;
+  }
+  
+  .header-nav-folder-content .header-nav-folder-item:not(:last-child){
+    margin-bottom:@navigation-folder-links-margin-bottom;
+  }
+  
+  .header-nav-folder-content{
+    opacity: 1 !important;
+    background: transparent !important;
+    position: static !important;
+    padding: 0 !important;
+    display:none;
+    transition:all 0.3s ease-out;
+  }
+  
+  .header-nav-folder-title{
+    display:flex;
+    gap: 7px;
+    align-items: center;
+    
+    &:after{
+      content:'\203A';
+      transition:all 0.3s ease-out;
+      transform: rotate(90deg);
+    }
+  }
+  
+  .header-nav-folder-title.open:after{
+    transform: rotate(270deg);
+  }
+  
+  .header-nav-folder-item{
+    padding-left:0.5rem; 
+  }
+}
+
+.new-navigation-wrapper.open-menu{
+  width:@menu-block-width;
+  flex-shrink: 0;
+  
+  .header-nav-item a{
+    opacity:1;
+    transition:opacity 0.3s ease-out;
+    
+    &:hover{
+      opacity:0.8;
+    }
+  }
+}
+
+body.open-side-menu{
+  overflow:hidden;
+  
+  .site-content-inner{
+    min-width:100vw; 
+  }
+}
+
+//Mobile links
+.header-menu-nav-item{
+  a{
+    font-family:@mobile-links-font-family;
+    font-size:@mobile-links-font-size;
+    font-weight:@mobile-links-font-weight;
+    letter-spacing:@mobile-links-letter-spacing;
+    margin-top:@mobile-links-margin-top;
+    margin-bottom:@mobile-links-margin-bottom;
+    text-transform:@mobile-links-text-transform;
+  }
+}
