--- a/assets/project-grid-plugin-1234/style.css
+++ b/assets/project-grid-plugin-1234/style.css
@@ -1,1 +1,1 @@
-
+.blur-summary-wrapper{display:grid}.blur-summary-wrapper .blur-item-title{margin-bottom:0;line-height:normal}.blur-summary-wrapper .blur-item-img{overflow:hidden}.blur-summary-wrapper .blur-item-img img{height:100%;width:100%;object-fit:cover}.blur-summary-wrapper .blur{filter:blur(42.5px);opacity:.5;transition:.2s ease-in-out .22s}
