--- a/assets/project-grid-plugin-1234/full.less
+++ b/assets/project-grid-plugin-1234/full.less
@@ -20,6 +20,13 @@
 @title-top-spacing-desctop:15px;
 @title-top-spacing-mobile:15px;
 @title-color:#000;
+@title-line-height:normal;
+@title-letter-spacing:0px;
+
+//Blur options
+@blur-intensity:42.5px;
+@blur-opacity:0.5;
+@blur-transition-delay:0.22s;
 
 .blur-summary-wrapper{
   display: grid;
@@ -46,8 +53,9 @@
     font-family:@title-font-family;
     margin-bottom:0;
     margin-top:@title-top-spacing-desctop;
-    line-height:normal;
+    line-height:@title-line-height;
     color:@title-color;
+    letter-spacing:@title-letter-spacing;
     
     @media screen and (max-width:767px){
       font-size:@title-font-size-mobile;
@@ -72,9 +80,9 @@
   }
   
   .blur{
-    filter: blur(42.5px);
-    opacity: .5;
+    filter: blur(@blur-intensity);
+    opacity: @blur-opacity;
     transition: all .2s ease-in-out;
-    transition-delay: .22s;
+    transition-delay: @blur-transition-delay;
   }
 }
