--- a/assets/Image cursor effect/full.less
+++ b/assets/Image cursor effect/full.less
@@ -1,1 +1,30 @@
+@images-container-z-index:5;
 
+.cursor-images-container{
+    width: 100%;
+    height:100%;
+    overflow: hidden;
+    position:absolute;
+    top:0;
+    left:0;
+    display:block;
+    z-index:@images-container-z-index;
+  
+  img{
+    object-fit:cover;
+  }
+
+    @media screen and (max-width:767px) {
+        display: none;
+    }
+  }
+
+.section-images-cursor{
+  overflow:hidden;
+}
+
+body.sqs-edit-mode{
+  .cursor-images-container{
+    display:none;
+  }
+}
