--- a/assets/image-list-view/full.less
+++ b/assets/image-list-view/full.less
@@ -7,6 +7,12 @@
 
 @gallery-item-height: ~"clamp(230px, 30.2vw, 588px)";
 
+@image-overlay-color:red;
+@image-overlay-opacity:0.3;
+
+@image-hover-overlay-color:black;
+@image-hover-overlay-opacity:0.3;
+
 @arrow-icon: url(data:image/svg+xml;utf8,%3Csvg%20xmlns%3D%22http%3A%2F%2Fwww.w3.org%2F2000%2Fsvg%22%20width%3D%2215%22%20height%3D%2215%22%3E%3Cpath%20d%3D%22M.656%2014.344%2014.5.5M1.942.5H14.5v12.348%22%20fill%3D%22transparent%22%20stroke%3D%22currentColor%22%20stroke-miterlimit%3D%2210%22%2F%3E%3C%2Fsvg%3E);
 
 @change-arrow-to-white: invert(1);
@@ -82,7 +88,8 @@
       position: relative;
       text-decoration: none;
       box-sizing: border-box;
-      border-top: 1px solid @font-color;
+      //border-top: 1px solid @font-color;
+      border-bottom: 1px solid @font-color;
 
       @media screen and (max-width: 767px) {
         display: flex;
@@ -170,7 +177,7 @@
     }
 
     .list-item:last-child {
-      border-bottom: 1px solid @font-color;
+      //border-bottom: 1px solid @font-color;
     }
 
     .list-item.first-row {
@@ -216,6 +223,21 @@
       height: 100%;
       width: 100%;
       overflow: hidden;
+      position:relative;
+
+      &::before{
+        content:'';
+        width:100%;
+        height:100%;
+        display:block;
+        position:absolute;
+        top:0;
+        left:0;
+        background:@image-overlay-color;
+        opacity:@image-overlay-opacity;
+        transition:opacity 0.3s ease-out;
+        z-index:1;
+      }
 
       img {
         height: 100%;
@@ -232,6 +254,7 @@
       width: ~"calc(100% - 40px)";
       display: flex;
       justify-content: space-between;
+      z-index: 3;
 
       p {
         color: @font-color_description-item;
@@ -278,6 +301,11 @@
     .gallery-item:hover {
       .item-image img {
         transform: scale(1.05);
+      }
+
+      .item-image::before{
+        opacity:@image-hover-overlay-opacity;
+        background:@image-hover-overlay-color;
       }
 
       .item-header_title p {
