--- a/assets/image-list-view/full.less
+++ b/assets/image-list-view/full.less
@@ -13,6 +13,14 @@
 @image-hover-overlay-color:black;
 @image-hover-overlay-opacity:0.3;
 
+@desctop-image-columns:2;
+@tablet-image-columns:2;
+@mobile-image-columns:1;
+
+@desctop-image-column-gap:30px;
+@tablet-image-column-gap:20px;
+@mobile-image-column-gap:15px;
+
 @arrow-icon: url(data:image/svg+xml;utf8,%3Csvg%20xmlns%3D%22http%3A%2F%2Fwww.w3.org%2F2000%2Fsvg%22%20width%3D%2215%22%20height%3D%2215%22%3E%3Cpath%20d%3D%22M.656%2014.344%2014.5.5M1.942.5H14.5v12.348%22%20fill%3D%22transparent%22%20stroke%3D%22currentColor%22%20stroke-miterlimit%3D%2210%22%2F%3E%3C%2Fsvg%3E);
 
 @change-arrow-to-white: invert(1);
@@ -195,20 +203,25 @@
   //gallery tab
   .gallery-container {
     .gallery-items {
-      @media screen and (min-width: 768px) {
         display: grid;
         gap: ~"clamp(20px, 1.5vw, 30px)";
         grid-auto-rows: min-content;
-        grid-template-columns: 1fr 1fr;
-        grid-template-columns: repeat(2, minmax(280px, 1fr));
         height: min-content;
         width: 100%;
+
+      @media  screen and (min-width:1200px) {
+        grid-template-columns: repeat(@desctop-image-columns, 1fr);
+        gap:@desctop-image-column-gap;
       }
 
-      @media screen and (max-width: 767px) {
-        display: grid;
-        gap: 15px;
-        grid-template-columns: repeat(1, minmax(280px, 1fr));
+      @media  (min-width:641px) and (max-width:1199px) {
+        grid-template-columns: repeat(@tablet-image-columns, 1fr);
+        gap:@tablet-image-column-gap;
+      }
+
+      @media  screen and (max-width:640px) {
+        grid-template-columns: repeat(@mobile-image-columns, 1fr);
+        gap:@mobile-image-column-gap;
       }
     }
 
